# mypackage

./: .pre-commit-config.yaml  README.md  pyproject.toml
mypackage/: __init__.py  utils.py
mypackage/geometry/: __init__.py  geometry.py
test/: test_geometry.py
