[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
license = {file = "LICENSE.txt"}

[project]
name = "mypackage"
version = "0.1.0"
description = "My first package"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "bumpver",
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]